Refactor applications package structure and update PMD test failure thresholds